# WallpaperMaker

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  client.cpp  example1.cpp  fade_images.cpp
